# hackathon_rise_2026

./: README.md  check_cuda.py  pyproject.toml  requirements.txt  test_device.py
clean_data/: cleand_smhi.csv
data/: data_exporations.ipynb
src/: app.py  main.py
