[project]
name = "hackathon-rise-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "statsmodels>=0.14.6",
    "streamlit>=1.57.0",
    "torch==2.2.2",
]
